--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
             text-align: center;
             font-weight: 100;
         }
+
+        .logged-in, .logged-out{
+            display: none;
+        }
     </style>
 
 </head>
@@ -62,16 +66,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#" data-toggle="modal" data-target="#micuenta">Mi cuenta</a>
+                    <a class="nav-link logged-in" href="#" data-toggle="modal" data-target="#micuenta">Mi cuenta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" id="salir">Salir</a>
+                    <a class="nav-link logged-in" href="#" id="salir">Salir</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" data-toggle="modal" data-target="#ingresarmodal">Ingresar</a>
+                    <a class="nav-link logged-out" href="#" data-toggle="modal" data-target="#ingresarmodal">Ingresar</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" data-toggle="modal" data-target="#registrarmodal">Registro</a>
+                    <a class="nav-link logged-out" href="#" data-toggle="modal" data-target="#registrarmodal">Registro</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -110,6 +114,11 @@
                             </div>
                         </div>
                     </form>
+                    <div class="row">
+                        <div class="col-12 text-center">
+                            <span onclick="entrarGoogle()" class="btn btn-danger">Ingresar con google</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -133,6 +142,10 @@
                     <form id="formaregistrar">
                         <div class="row">
                             <div class="col-12 m-2">
+                                <input type="text" id="rnombre" required class="form-control"
+                                    placeholder="Ingresa tu nombre">
+                            </div>
+                            <div class="col-12 m-2">
                                 <input type="email" id="rcorreo" required class="form-control"
                                     placeholder="Ingresa tu correo">
                             </div>
@@ -140,8 +153,16 @@
                                 <input type="password" id="rcontrasena" required class="form-control"
                                     placeholder="Ingresa tu contraseña">
                             </div>
+                            <div class="col-12 m-2">
+                                <input type="number" step="any" id="rtelefono" required class="form-control"
+                                    placeholder="Ingresa numero de telefono">
+                            </div>
+                            <div class="col-12 m-2">
+                                <input type="text" id="rdireccion" required class="form-control"
+                                    placeholder="Ingresa tu direccion">
+                            </div>
                             <div class="col-12 text-center">
-                                <button class="btn btn-primary">Registrarse</button>
+                                <input type="submit" class="btn btn-primary" value="Regitrarse">
                                 <p class="error text-danger"></p>
                             </div>
                         </div>
@@ -166,7 +187,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <h1>Mi cuenta</h1>
+                    <div class="modal-body datosdelacuenta"></div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -177,22 +198,8 @@
 
     <div class="container my-5">
         <h1 class="mb-3">Lista de Platillos</h1>
-        <p>Usuario: correo@hotmail.com   Contraseña: 123456</p>
         <div class="row text-center" id="listadeplatillos">
-            <div class="col-12 col-md-4">
-                <img src="imagenes/pizza.jpg" alt="Pizza">
-                <p class="name mt-3">Pizza de Pepperoni</p>
-                <p>$120</p>
-            </div>
-            <div class="col-12 col-md-4">
-                <img src="imagenes/tacos.jpg" alt="Tacos">
-                <p class="name mt-3">Tacos</p>
-                <p>$89</p>
-            </div>
-            <div class="col-12 col-md-4">
-                <img src="imagenes/sushi.jpg" alt="Sushi">
-                <p class="name mt-3">Sushi</p>
-                <p>$100</p>
+            
             </div>
 
         </div>
